--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% include 'components/leftbar.html'%}
+  
+<div class = "flex flex-row w-full relative top-[10vh]">
+  {% include 'components/leftbar.html'%}
+</div>
 {% endblock %}
