--- a/templates/components/create_community.html
+++ b/templates/components/create_community.html
@@ -1,3 +1,4 @@
+{% load topics %}
 <div id="createCommunityModal"
     class="modal fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
     {% if is_loading %}
@@ -52,7 +53,7 @@
                         <p class='text-center'>Drag and drop or browse your device</p>
                     </div>
                 </label>
-                <input id="banner_file_input" name="banner" type="file" accept='image/*' class='hidden'/>
+                <input id="banner_file_input" name="banner" type="file" accept='image/*' class='hidden' />
             </div>
         </div>
         <div class='flex flex-row justify-between'>
@@ -86,7 +87,7 @@
                             <p class='text-center'>Drag and drop or browse your device</p>
                         </div>
                     </label>
-                    <input id="avatar_file_input" name="avatar" type="file" accept="image/*" class="hidden" required/>
+                    <input id="avatar_file_input" name="avatar" type="file" accept="image/*" class="hidden" required />
                 </div>
 
             </div>
@@ -176,7 +177,24 @@
                 </label>
                 <input type="radio" id="restricted" name="visibility" value="restricted" />
             </div>
+
+
+
+
         </div>
+
+        <p>TODO: Should be on next page</p>
+        <div class="flex flex-col max-h-[100px] overflow-auto">
+            {% get_global_topics as topics %}
+            {% for topic in topics%}
+            <div class="flex items-center">
+                <input type="checkbox" id="topic-{{ topic.id }}" name="topics" value="{{ topic.id }}"
+                    class="topic-checkbox" />
+                <label for="topic-{{ topic.id }}" class="ml-2">{{ topic.name }}</label>
+            </div>
+            {% endfor %}
+        </div>
+
 
         <button type="submit" class="w-full bg-[#006C7F] p-2 rounded-lg text-white">Create Community</button>
     </form>
@@ -262,5 +280,18 @@
 
     setupFileInput(banner_preview, banner_preview_container, banner_file_input, banner_file_input_container);
     setupRemoveFilePreview(remove_banner_preview_btn, banner_preview, banner_preview_container, banner_file_input, banner_file_input_container)
+
+
+    const checkboxes = document.querySelectorAll('.topic-checkbox');
+    const maxChecks = 3;
+
+    checkboxes.forEach(checkbox => {
+        checkbox.addEventListener('change', () => {
+            const checkedCount = document.querySelectorAll('.topic-checkbox:checked').length;
+            if (checkedCount > maxChecks) {
+                checkbox.checked = false;
+            }
+        });
+    });
 
 </script>
