--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     <link href="{% static 'css/tailwind.css' %}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -49,7 +50,37 @@
             });
         };
 
+        function setupRemoveFilePreview(button, previewElement, previewContainer, fileInput, fileInputContainer) {
+            button.addEventListener("click", () => {
+                if (previewContainer) {
+                    previewContainer.classList.add('hidden');
+                }
+                if (fileInputContainer) {
+                    fileInputContainer.classList.remove('hidden');
+                }
+                if (previewElement) {
+                    previewElement.src = '';
+                }
+                fileInput.value = "";
+            })
+        }
+
+        function setupFileInput(previewElement, previewContainer, fileInput, fileInputContainer) {
+            fileInput.addEventListener("change", function (event) {
+                var file = event.target.files[0];
+                if (file) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        previewElement.src = e.target.result;
+                        fileInputContainer.classList.add("hidden");
+                        previewContainer.classList.remove("hidden");
+                    };
+                    reader.readAsDataURL(file);
+                }
+            });
+        }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 </body>
 
 </html>
