implemented create post and basic dashboard posts view: TODO post flairs

--- a/templates/community.html
+++ b/templates/community.html
@@ -4,7 +4,8 @@
 {% block content %}
 <div class="flex flex-row relative top-[10vh]">
     {% include 'components/leftbar.html' %}
-    <div class="p-10 top-[10vh] w-full">
+
+    <div class="p-10 w-[85%] relative left-[15%]">
         {% if community %}
         <div
             class='w-full flex items-stretch justify-center h-[150px] rounded-lg border border-[#ffffff33] relative z-40'>
