--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div
-    class="flex flex-col gap-2 overflow-auto border-r border-[#ffffff33] p-6 left-0 text-sm top-[10vh] h-[90vh] w-[15%]">
+    class="flex flex-col gap-2 overflow-auto border-r border-[#ffffff33] p-6 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed">
     <div>
         <a href="{% url 'dashboard' %}"
             class="flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full hover:bg-[#1a282d]">
