--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -26,7 +26,7 @@
         </button>
 
 
-        <a href="" class="flex flex-row gap-1 items-center">
+        <a href="{% url 'submit' %}" class="flex flex-row gap-1 items-center">
             <svg class="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
             </svg>
