--- a/templates/components/editor.html
+++ b/templates/components/editor.html
@@ -39,7 +39,7 @@
             <button class="ql-clean"></button>
         </span>
     </div>
-    <div id="editor" style="">
+    <div id="editor">
     </div>
 </div>
 
