--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -33,13 +33,13 @@
             class="overflow-hidden transition-all duration-200 {% if showCommunities %}opacity-100 max-h-content{% else %}h-full opacity-100{% endif %} flex flex-col gap-2">
             <button
                 class="flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full hover:bg-[#1a282d]"
-                onclick="openModal('createCommunityModal')">
+                onclick="" data-modal-target="createCommunityModal" data-modal-toggle="createCommunityModal">
                 <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
                 </svg>
                 <p>Create Community</p>
             </button>
-            {% include 'components/create_community.html'%}
+
 
             {% for community in user_communities%} <a href="{% url 'community' community.name %}"
                 class="flex flex-row gap-2 justify-start items-center px-3 py-1 rounded-lg w-full hover:bg-[#1a282d]">
@@ -53,6 +53,8 @@
             </a>
             {% endfor %}
         </div>
+        {%endif%}
     </div>
-    {%endif%}
+
 </div>
+{% include 'components/create_community.html'%}
