--- a/templates/community.html
+++ b/templates/community.html
@@ -4,103 +4,140 @@
 {% block content %}
 <div class="flex flex-row relative top-[10vh]">
     {% include 'components/leftbar.html' %}
-    <div class = "p-10 flex flex-col w-[85%] relative left-[15%] min-h-[90vh]">
-    <div>
-        {% if community %}
-        <div
-            class='w-full flex items-stretch justify-center h-[150px] rounded-lg border border-[#ffffff33] relative z-40'>
-            <img id="community_banner" src="{{ community.banner }}" alt="Community Banner"
-                class='object-cover w-full h-full rounded-lg' />
-            <!--TODO-->
-            {% if user.is_authenticated and user.id == community.ownerid %}
-            <button>
-                <svg fill="currentColor" height="16" icon-name="edit-outline" viewBox="0 0 20 20" width="16"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
-                    </path>
-                </svg>
-            </button>
-            {% endif %}
+    <div class="p-10 flex flex-col w-[85%] relative left-[15%] min-h-[90vh]">
+        <div>
+            {% if community %}
+            <div
+                class='w-full flex items-stretch justify-center h-[150px] rounded-lg border border-[#ffffff33] relative'>
 
-            {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}
-            <button onClick='set_is_editing(true); set_current_edit("Banner")' class='absolute right-3
-                top-[70%] rounded-full p-2 bg-black'>
-                <svg rpl="" fill="currentColor" height="16" icon-name="edit-outline" viewBox="0 0 20 20" width="16"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
-                    </path>
-                </svg>
-            </button>
-            {% endif %}
-        </div>
-        <div class='flex flex-row justify-between w-full relative bottom-6 items-end'>
-            <div class='flex flex-row gap-2 items-end'>
-                <div
-                    class="relative rounded-full w-[90px] h-[90px] border z-50 {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}cursor-pointer{%endif%}">
-                    {% if community.avatar %}
-                    <img id="community_avatar" src="{{community.avatar}}"
-                        class=" w-full h-full rounded-full object-cover" />
-                    {%else %}
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <img id="community_banner" src="{{ community.banner }}" alt="Community Banner"
+                    class='object-cover w-full h-full rounded-lg' />
+
+                {% if user_communities|get_community_role:community.id %}
+                {% with user_role=user_communities|get_community_role:community.id %}
+                {% if user_role == 'moderator' or user_role == 'admin' %}
+                <button onClick='set_is_editing(true); set_current_edit("Banner")' class='absolute right-3
+                top-[70%] rounded-full p-2 bg-white dark:bg-dark_1 dark:hover:bg-dark_2'>
+                    <svg rpl="" fill="currentColor" height="16" icon-name="edit-outline" viewBox="0 0 20 20" width="16"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0ZM8.016 8.633a1.616 1.616 0 0 0-.2.806V13.5H5.931V6.172h1.8v.9h.039a3.009 3.009 0 0 1 1.018-.732 3.45 3.45 0 0 1 1.449-.284c.246-.003.491.02.732.068.158.024.309.08.444.164l-.759 1.832a2.09 2.09 0 0 0-1.093-.26c-.33-.01-.658.062-.954.208a1.422 1.422 0 0 0-.591.565Zm2.9 6.918H9.355L14.7 2.633c.426.272.828.58 1.2.922l-4.984 11.996Z">
+                            d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
                         </path>
                     </svg>
-                    {%endif%}
-                    {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}
-                    <div onClick='set_is_editing(true); set_current_edit("Avatar")' class='group flex
+                </button>
+                {% endif %}
+                {% endwith %}
+                {% endif %}
+            </div>
+            <div class='flex flex-row justify-between w-full relative bottom-6 items-end'>
+                <div class='flex flex-row gap-2 items-end'>
+                    <div
+                        class="relative inline-flex items-center justify-center w-24 h-24 overflow-hidden rounded-full bg-white dark:bg-dark_1 p-2 {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}cursor-pointer{%endif%}">
+                        {% if community.avatar %}
+                        <img id="community_avatar" src="{{community.avatar}}"
+                            class="w-full h-full rounded-full object-cover" />
+
+                        {% if user_communities|get_community_role:community.id %}
+                        {% with user_role=user_communities|get_community_role:community.id %}
+                        {% if user_role == 'moderator' or user_role == 'admin' %}
+
+                        <div onClick='set_is_editing(true); set_current_edit("Avatar")' class='group flex
                         items-center justify-center absolute transform right-1/2 translate-x-1/2 bottom-1/2
-                        translate-y-1/2 w-full h-full border border-white rounded-full hover:bg-[#666666]/50'>
-                        <svg class='opacity-0 group-hover:opacity-100' rpl="" fill="currentColor" height="16"
-                            icon-name="edit-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
+                        translate-y-1/2 w-20 h-20 rounded-full hover:bg-[#666666]/50'>
+                            <svg class='opacity-0 group-hover:opacity-100' rpl="" fill="currentColor" height="16"
+                                icon-name="edit-outline" viewBox="0 0 20 20" width="16"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
+                                </path>
+                            </svg>
+                        </div>
+                        {% endif %}
+                        {% endwith %}
+                        {% endif %}
+
+                        {%else %}
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path
-                                d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
+                                d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0ZM8.016 8.633a1.616 1.616 0 0 0-.2.806V13.5H5.931V6.172h1.8v.9h.039a3.009 3.009 0 0 1 1.018-.732 3.45 3.45 0 0 1 1.449-.284c.246-.003.491.02.732.068.158.024.309.08.444.164l-.759 1.832a2.09 2.09 0 0 0-1.093-.26c-.33-.01-.658.062-.954.208a1.422 1.422 0 0 0-.591.565Zm2.9 6.918H9.355L14.7 2.633c.426.272.828.58 1.2.922l-4.984 11.996Z">
                             </path>
                         </svg>
+                        {%endif%}
                     </div>
+                    <p class='font-bold text-2xl text-txt_color_1 dark:text-white_1'>r/{{community.name}}</p>
+                </div>
+
+
+                <div class='flex flex-row items-center gap-2'>
+                    <a href="{% url 'submit' %}"
+                        class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 flex flex-row gap-2 rounded-2xl border border-white px-3 py-2 items-center'>
+                        <svg rpl="" fill="currentColor" height="20" icon-name="add-outline" viewBox="0 0 20 20"
+                            width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
+                        </svg>
+                        <p>Create Post</p>
+                    </a>
+                    {% if community not in user_communities%}
+                    <button class='px-2 py-1 border border-black rounded-lg'>Join</button>
                     {% endif %}
                 </div>
-                <p class='font-bold text-2xl'>r/{{community.name}}</p>
+            </div>
+            {% endif %}
+        </div>
+        <div class="flex flex-row gap-2">
+            <div class="w-[70%] border">
+
             </div>
 
+            <div
+                class="inline-block w-[30%] flex flex-col gap-3 max-w-sm p-6 bg-bg_1 shadow-md rounded-lg dark:bg-dark_2 dark:border-gray-700 sticky top-[15vh] h-min max-h-[85vh] overflow-auto">
+                <div>
+                    <div class="flex flex-row justify-between">
+                        <h5
+                            class="mb-2 text-md text-txt_color_2 font-bold tracking-tight text-gray-900 dark:text-white">
+                            {{community.name}} on
+                            Reddit
+                        </h5>
 
-            <div class='flex flex-row items-center gap-2'>
-                <button class='flex flex-row gap-2 rounded-lg border border-white px-2 py-1 items-center'>
-                    <svg rpl="" fill="currentColor" height="20" icon-name="add-outline" viewBox="0 0 20 20" width="16"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
-                    </svg>
-                    <p>Create a Post</p>
-                </button>
-                {% if community not in user_communities%}
-                <button class='px-2 py-1 border border-black rounded-lg'>Join</button>
-                {% endif %}
+                        {% if user_communities|get_community_role:community.id %}
+                        {% with user_role=user_communities|get_community_role:community.id %}
+                        {% if user_role == 'moderator' or user_role == 'admin' %}
 
+                        <button data-modal-target="edit_community_detail" data-modal-toggle="edit_community_detail"
+                            class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 shadow-md rounded-full p-2'
+                            onclick="populate_edit_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
+                            <svg rpl="" fill="currentColor" height="16" icon-name="edit-outline" viewBox="0 0 20 20"
+                                width="16" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
+                                </path>
+                            </svg>
+                        </button>
+                        {% endif %}
+                        {% endwith %}
+                        {% endif %}
 
-                {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}
-                <p>ADMIN OR MODERATOR</p>
-                {%endif%}
+                    </div>
+                    <p class="mb-3 text-txt_color_3 font-normal text-dark_2 dark:text-white_2">{{community.about}}
+                    </p>
+                </div>
+
+                {%include 'components/community/community_topics.html'%}
+                {%include 'components/community/community_rules.html' %}
             </div>
 
         </div>
-        {% endif %}
-    </div>
-    <div class = "flex flex-row gap-2">
-      <div class = "w-[70%] border">
-        
-      </div>
 
-
-      <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 w-[30%]">
-        <h5 class="mb-2 text-md font-bold tracking-tight text-gray-900 dark:text-white">{{community.name}} on Reddit</h5>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{community.about}}</p>
-        
-      </div>
     </div>
 </div>
-</div>
 
-{% include 'components/edit_community_appearance.html' %}
+{%include 'components/community/edit_community_topics.html'%}
+{% include 'components/community/edit_community_appearance.html' %}
+{%include 'components/community/edit_community_details.html' %}
+
+{%include 'components/community/delete_community_rule.html'%}
+{%include 'components/community/create_community_rule.html'%}
+{%include 'components/community/edit_community_rule.html'%}
+
+
 {% endblock %}
