--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -1,15 +1,14 @@
 {% load static %}
 <div
-    class="flex flex-col gap-2 overflow-auto border-r border-[#ffffff33] p-6 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed">
+    class="flex flex-col gap-2 overflow-auto border-r border-[#ffffff33] p-3 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed border border-r-dark_3 dark:bg-dark_3 dark:border-gray_1">
     <div>
         <a href="{% url 'dashboard' %}"
-            class="flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full hover:bg-[#1a282d]">
-            <!-- <img src="{% static 'icons/house.svg' %}" class="w-4 h-4" alt="Home Icon"> -->
+            class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full">
             <p>Home</p>
         </a>
 
-        <button class="flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full hover:bg-[#1a282d]">
-            <!-- <img src="{% static 'icons/like.svg' %}" class="w-4 h-4" alt="Popular Icon"> -->
+        <button
+            class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full">
             <p>Popular</p>
         </button>
     </div>
@@ -18,22 +17,24 @@
 
     {% if user.is_authenticated%}
     <div>
-        <button class="flex flex-row justify-between items-center px-3 py-2 rounded-lg w-full hover:bg-[#1a282d]"
-            onclick="toggleCommunities()">
+        <input type="checkbox" id="toggle-communities" class="peer hidden" checked
+            onchange="toggle_dropdown_cap(event)" />
+        <label for="toggle-communities"
+            class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row justify-between items-center px-3 py-2 rounded-lg w-full cursor-pointer z-40">
             <p>Communities</p>
             <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg"
-                class="{% if showCommunities %}rotate-180{% else %}rotate-0{% endif %} transition-all">
+                class="peer-checked:rotate-180 rotate-0 transition-transform">
                 <path
                     d="M10 13.125a.624.624 0 0 1-.442-.183l-5-5 .884-.884L10 11.616l4.558-4.558.884.884-5 5a.624.624 0 0 1-.442.183Z">
                 </path>
             </svg>
-        </button>
+        </label>
 
         <div
-            class="overflow-hidden transition-all duration-200 {% if showCommunities %}opacity-100 max-h-content{% else %}h-full opacity-100{% endif %} flex flex-col gap-2">
+            class="peer-checked:max-h-[1000px] peer-checked:opacity-100 max-h-0 opacity-0 transition-transform duration-300 overflow-hidden flex flex-col gap-2">
             <button
-                class="flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full hover:bg-[#1a282d]"
-                onclick="" data-modal-target="createCommunityModal" data-modal-toggle="createCommunityModal">
+                class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full"
+                data-modal-target="createCommunityModal" data-modal-toggle="createCommunityModal">
                 <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
                 </svg>
@@ -42,7 +43,7 @@
 
 
             {% for community in user_communities%} <a href="{% url 'community' community.name %}"
-                class="flex flex-row gap-2 justify-start items-center px-3 py-1 rounded-lg w-full hover:bg-[#1a282d]">
+                class="hover:bg-button_gray_hover flex flex-row gap-2 justify-start items-center px-3 py-1 rounded-lg w-full dark:hover:bg-gray_1">
                 <div class="rounded-full w-[30px] h-[30px] bg-gray-200 border border-black">
                     {% if community.avatar%}
                     <img src="{{ community.avatar}}" class="w-full h-full rounded-full object-cover"
@@ -58,3 +59,19 @@
 
 </div>
 {% include 'components/create_community.html'%}
+
+<script>
+    function toggle_dropdown_cap(event) {
+        const target = event.target;
+        const nextSibling = target.nextElementSibling;
+        const cap = nextSibling.querySelector('svg');
+
+        if (target.checked) {
+            cap.classList.add('rotate-0');
+            cap.classList.remove('rotate-180');
+        } else {
+            cap.classList.add('rotate-180');
+            cap.classList.remove('rotate-0');
+        }
+    }
+</script>
